# Obsidian-Logger-with-Plugin-and-MCP

./: .cursorrules  .gitignore  CHANGELOG.md  CI-CD-Coverage-Fix.md  CI-CD-Fix-Summary.md  CI-CD-修复完成.md  CI-CD-修复总结-覆盖率问题.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  USER_MANUAL.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/agents/: my-agent.agent.md
.github/workflows/: build.yml  release.yml  test.yml
docs/: Obsidian Logger 项目开发方案.md
docs/api/: MCP-Tools-API.md
docs/architecture/: Auto-Reload架构设计.md
docs/development/: DEVELOPMENT_PLAN.md  文档查询建议.md  文档管理规范.md
docs/guides/: uvx安装指南.md  快速测试指南-阶段二.md  设置界面使用指南.md  通配符和文件类型配置指南.md
docs/misc/: Auto-Reload功能增强.md  CI-CD-修复摘要.md  CI-CD-测试路径修复报告.md  CI-CD-编码错误修复报告.md  CI-CD-编码问题修复报告.md  CI-CD-诊断报告.md  CI-CD修复总结.md  MCP功能开关说明.md
docs/testing/: Auto-Reload故障排查.md  Auto-Reload调试命令.md  单元测试完成报告.md  单元测试指南.md  阶段三集成测试指南.md  阶段二完整测试指南.md  阶段二测试报告-任务2.1-2.2.md
examples/: README.md
examples/mcp-examples/: Auto-Reload管理示例.md  日志分析工作流.md
global-logger/: .eslintrc.json  README.md  data.json  esbuild.config.mjs  jest.config.js  manifest.json  package-lock.json  package.json  versions.json
global-logger/__mocks__/: obsidian.ts  setup.ts
global-logger/src/: main.ts  settings.ts
global-logger/src/auto-reload/: file-watcher.ts  index.ts  mode-manager.ts  plugin-reloader.ts  reload-stats.ts  smart-identifier.ts
global-logger/src/logger/: console-interceptor.ts  file-manager.ts  index.ts  log-collector.ts  log-stats.ts
global-logger/src/logger/__tests__/: console-interceptor.test.ts  log-collector.test.ts
global-logger/src/shared/: types.ts  utils.ts
global-logger/src/shared/__tests__/: utils.test.ts
mcp-server/: README.md  config.example.json  config.json  create-config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  verify-paths.py
mcp-server/src/: __init__.py  cache.py  config_manager.py  file_monitor.py  log_manager.py  mcp_obsidian_logger.py
mcp-server/tests/: conftest.py  test_cache.py  test_config_manager.py  test_log_manager.py
scripts/: README.md  dev-setup.bat  dev-setup.sh  do-link.bat  install-to-sandbox.bat  install.bat  install.sh  link-plugin.bat  link-plugin.sh  reorganize-docs.bat  test-setup.bat
tests/: README.md
