[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-logger-mcp"
version = "1.0.0"
description = "MCP Server for Obsidian Logger - 日志收集和 Auto-Reload 管理服务"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LINYF510"}
]
keywords = ["obsidian", "mcp", "logger", "auto-reload", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/LINYF510/Obsidian-Logger-with-Plugin-and-MCP"
Repository = "https://github.com/LINYF510/Obsidian-Logger-with-Plugin-and-MCP"
Issues = "https://github.com/LINYF510/Obsidian-Logger-with-Plugin-and-MCP/issues"

[project.scripts]
obsidian-logger-mcp = "mcp_obsidian_logger:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]



requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-logger-mcp"
version = "1.0.0"
description = "MCP Server for Obsidian Logger - 日志收集和 Auto-Reload 管理服务"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LINYF510"}
]
keywords = ["obsidian", "mcp", "logger", "auto-reload", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/LINYF510/Obsidian-Logger-with-Plugin-and-MCP"
Repository = "https://github.com/LINYF510/Obsidian-Logger-with-Plugin-and-MCP"
Issues = "https://github.com/LINYF510/Obsidian-Logger-with-Plugin-and-MCP/issues"

[project.scripts]
obsidian-logger-mcp = "mcp_obsidian_logger:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]


